--- a/infinity_server-web/src/main/webapp/login.xhtml
+++ b/infinity_server-web/src/main/webapp/login.xhtml
@@ -39,7 +39,7 @@
                     <p:messages closable="true"/>
 
                     <div class="form-group has-feedback">
-                        <p:inputText value="#{logonMB.email}" type="email" styleClass="form-control" placeholder="Just type any value"
+                        <p:inputText value="#{logonMB.login}" styleClass="form-control" placeholder="Just type any value"
                                      required="true"
                                      requiredMessage="Email is required."/>
                         <i class="fa fa-envelope form-control-feedback"></i>
@@ -61,16 +61,6 @@
                         </div>
                     </div>
                 </h:form>
-
-                <div class="social-auth-links text-center">
-                    <p>- OR -</p>
-                    <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i
-                            class="fa fa-facebook"></i> Sign in using
-                        Facebook</a>
-                    <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i
-                            class="fa fa-google-plus"></i> Sign in using
-                        Google+</a>
-                </div>
                 <!-- /.social-auth-links -->
 
                 <a href="#">I forgot my password</a><br/>
