--- a/infinity_server-web/src/main/webapp/403.xhtml
+++ b/infinity_server-web/src/main/webapp/403.xhtml
@@ -14,7 +14,7 @@
                 <h3><i class="fa fa-lock text-fatal"></i> #{adm['label.403.message']}</h3>
 
                 <p>
-                    #{adm['label.go-back']} <p:link style="text-decoration: underline" href="/" value="Home"
+                    #{adm['label.go-back']} <p:link style="text-decoration: underline" href="/login.jsf" value="Home"
                                                     escape="false"/>.
                 </p>
 
