--- a/infinity_server-web/src/main/webapp/user/articles.xhtml
+++ b/infinity_server-web/src/main/webapp/user/articles.xhtml
@@ -1,54 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/WEB-INF/templates/template.xhtml">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:adm="http://github.com/adminfaces"
+	template="#{layoutMB.template}">
 
-    <ui:define name="head-end">
-        <ui:param name="renderBreadCrumb" value="false"/>
-    </ui:define>
+	<ui:define name="head-end">
+		<ui:param name="renderBreadCrumb" value="false" />
+	</ui:define>
 
-    <ui:define name="title">
-        <h2 class="align-center">
-            Welcome to the <span class="text-aqua"> <i><a href="https://github.com/adminfaces/admin-starter"
-                                                          target="_blank"
-                                                          style="text-transform: none;text-decoration: none"> AdminFaces Starter</a></i></span> Project!
-            <br/>
-            <small>Integrating <p:link value="Primefaces" href="http://primefaces.org"/>, <p:link value="Bootstrap"
-                                                                                                  href="http://getbootstrap.com/"/> and
-                <p:link value="Admin LTE" href="https://almsaeedstudio.com/themes/AdminLTE/index2.html/"/> into your
-                <p:link value="JSF" href="https://javaserverfaces.java.net/"/> application.
-            </small>
-        </h2>
+	<ui:define name="title">
+		<h2 class="align-center">
+			<span class="text-aqua">Article Page</span> <br /> <small>This
+				page contains all the news we provide as real time market data</small>
+		</h2>
 
-    </ui:define>
+	</ui:define>
+	<ui:define name="body" id="body">
 
-    <ui:define name="body">
-        <script type="text/javascript">
-            /*if ('serviceWorker' in navigator) {
-             navigator.serviceWorker.register('sw.js');
-             }*/
+		<h:form>
+			<p:tabView dynamic="true" cache="true" effect="fold">
+				<p:tab title="Trending">
+					<ui:repeat var="article" value="#{articleView.trendingArticles}">
+						<p:fieldset legend="#{article.title}" toggleable="true"
+							toggleSpeed="500">
+							<h:panelGrid columns="3" cellpadding="5">
+								<p:graphicImage width="150" height="120"
+									value="#{article.urlToImage}" />
+								<p style="padding-left: 3em;">
+									<b>Author:</b> #{article.author}<br></br> <b>Published at:</b>
+									#{article.publishedAt}<br></br> <a href="#{article.url}"
+										target="_blank">#{article.description}</a>
+								</p>
+							</h:panelGrid>
+							<p:commandButton value="Add" icon="fa fa-plus"
+								actionListener="#{articleView.addArticle(article)}" update="@form" />
+						</p:fieldset>
+					</ui:repeat>
+				</p:tab>
+				<p:tab title="Custom">
+					<h3>First pick a new source</h3>
+
+					<div class="box box-primary">
+						<div class="box-header with-border">
+							<p:selectOneMenu value="#{articleView.url}">
+								<f:selectItem itemLabel="Select One" />
+								<f:selectItem itemLabel="Apple" itemValue="apple" />
+								<f:selectItem itemLabel="Bitcoin" itemValue="bitcoin" />
+								<f:selectItem itemLabel="Netflix" itemValue="netflix" />
+								<f:selectItem itemLabel="Amazon" itemValue="amazon" />
+								<f:selectItem itemLabel="Facebook" itemValue="facebook" />
+								<f:ajax listener="#{articleView.selectNewsSource}"
+									render="@form" />
+							</p:selectOneMenu>
+						</div>
+					</div>
+
+					<ui:repeat var="article" value="#{articleView.nsArticles}">
+						<p:fieldset legend="#{article.title}" toggleable="true"
+							toggleSpeed="500">
+							<h:panelGrid columns="3" cellpadding="5">
+								<p:graphicImage width="150" height="120"
+									value="#{article.urlToImage}" />
+								<p style="padding-left: 3em;">
+									<b>Author:</b> #{article.author}<br></br> <b>Published at:</b>
+									#{article.publishedAt}<br></br> <a href="#{article.url}"
+										target="_blank">#{article.description}</a>
+								</p>
+							</h:panelGrid>
+							<p:commandButton value="Add" icon="fa fa-plus"
+								actionListener="#{articleView.addArticle(article)}" update="@form" />
+						</p:fieldset>
+					</ui:repeat>
+
+				</p:tab>
+				<p:tab title="Saved">
+					<ui:repeat var="article" value="#{articleView.myArticles}">
+						<p:fieldset legend="#{article.title}" toggleable="true"
+							toggleSpeed="500">
+							<p:ajax event="toggle" listener="#{articleView.handleToggle}" />
+							<h:panelGrid columns="3" cellpadding="5">
+								<p:graphicImage width="150" height="120"
+									value="#{article.urlToImage}" />
+								<p style="padding-left: 3em;">
+									<b>Author:</b> #{article.author}<br></br> <b>Published at:</b>
+									#{article.publishedAt}<br></br> <a href="#{article.url}"
+										target="_blank">#{article.description}</a>
+								</p>
+							</h:panelGrid>
+							<p:commandButton value="Remove" icon="fa fa-remove"
+								actionListener="#{articleView.removeArticle(article)}"
+								update="@form" />
+						</p:fieldset>
+					</ui:repeat>
+				</p:tab>
+			</p:tabView>
+		</h:form>
 
 
-            if ('serviceWorker' in navigator) {
-              /*  navigator.serviceWorker.getRegistrations().then(function (registrations) {
-                    for (let registration of registrations) {
-                        registration.unregister()
-                    }
-                });*/
-
-                 window.addEventListener('load', function () {
-                    navigator.serviceWorker.register('sw.js').then(function (registration) {
-                        // Registration was successful
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    }, function (err) {
-                        // registration failed :(
-                        console.log('ServiceWorker registration failed: ', err);
-                    });
-                });
-            }
-        </script>
-    </ui:define>
-
-
+	</ui:define>
 </ui:composition>
