--- a/infinity_server-web/src/main/webapp/user/stock.xhtml
+++ b/infinity_server-web/src/main/webapp/user/stock.xhtml
@@ -1,55 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/WEB-INF/templates/template.xhtml">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:adm="http://github.com/adminfaces"
+	template="#{layoutMB.template}">
 
-    <ui:define name="head-end">
-        <ui:param name="renderBreadCrumb" value="false"/>
-    </ui:define>
+	<ui:define name="head-end">
+		<ui:param name="renderBreadCrumb" value="false" />
+	</ui:define>
 
-    <ui:define name="title">
-        <h2 class="align-center">
-            Welcome to the <span class="text-aqua"> <i><a href="https://github.com/adminfaces/admin-starter"
-                                                          target="_blank"
-                                                          style="text-transform: none;text-decoration: none"> AdminFaces Starter</a></i></span> Project!
-            <br/>
-            <small>Integrating <p:link value="Primefaces" href="http://primefaces.org"/>, <p:link value="Bootstrap"
-                                                                                                  href="http://getbootstrap.com/"/> and
-                <p:link value="Admin LTE" href="https://almsaeedstudio.com/themes/AdminLTE/index2.html/"/> into your
-                <p:link value="JSF" href="https://javaserverfaces.java.net/"/> application.
-            </small>
-        </h2>
+	<ui:define name="title">
+		<h2 class="align-center">
+			<span class="text-aqua">Stock Page</span> <br /> <small>This
+				page contains all the stocks we provide as real time market data</small>
+		</h2>
 
-    </ui:define>
-
-    <ui:define name="body">
-        <script type="text/javascript">
-        console.log("azerty");
-            /*if ('serviceWorker' in navigator) {
-             navigator.serviceWorker.register('sw.js');
-             }*/
-
-
-            if ('serviceWorker' in navigator) {
-              /*  navigator.serviceWorker.getRegistrations().then(function (registrations) {
-                    for (let registration of registrations) {
-                        registration.unregister()
-                    }
-                });*/
-
-                 window.addEventListener('load', function () {
-                    navigator.serviceWorker.register('sw.js').then(function (registration) {
-                        // Registration was successful
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    }, function (err) {
-                        // registration failed :(
-                        console.log('ServiceWorker registration failed: ', err);
-                    });
-                });
-            }
-        </script>
-    </ui:define>
+	</ui:define>
+	<ui:define name="body">
+		<h:form id="form">
+			<div class="box box-primary">
+				<div class="box-header with-border">
+					<p:selectOneMenu value="#{stockView.perspective}">
+						<f:selectItem itemLabel="Select One" />
+						<f:selectItem itemLabel="My Stocks Perspective" itemValue="my" />
+						<f:selectItem itemLabel="All Stocks Perspective" itemValue="all" />
+						<f:ajax render="@form" />
+					</p:selectOneMenu>
+				</div>
+			</div>
 
 
+			<p:dataTable id="my-stock-table" rows="10" paginator="true"
+				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
+				rowsPerPageTemplate="5,10,15" var="stock"
+				value="#{stockView.myStocks}" selectionMode="single"
+				selection="#{stockView.selectedStock}" rowKey="#{stock.id}"
+				rendered="#{stockView.perspective == 'my'}"
+				emptyMessage="No cars found with given criteria"
+				filteredValue="#{stockView.myStocks}" widgetVar="mystocks">
+
+
+				<f:facet name="header" id="headerTable">
+					<p:commandButton value="View" icon="fa fa-search"
+						actionListener="#{stockView.createAreaModel}"
+						process="my-stock-table" update="my-stock-table" />
+					<p:commandButton value="Comment AI" icon="fa fa-comment"
+						actionListener="#{stockView.commentStock}"
+						process="my-stock-table" update="my-stock-table" />
+					<p:commandButton value="Remove" icon="fa fa-remove"
+						actionListener="#{stockView.removeStock}" process="my-stock-table"
+						update="my-stock-table">
+						<p:confirm header="Confirmation" message="Are you sure?"
+							icon="ui-icon-alert" />
+					</p:commandButton>
+				</f:facet>
+				<p:column headerText="Id">
+					<h:outputText value="#{stock.id}" />
+				</p:column>
+				<p:column headerText="Name">
+					<h:outputText value="#{stock.name}" />
+				</p:column>
+				<p:column headerText="Symbol">
+					<h:outputText value="#{stock.symbol}"
+						style="#{(stock.variation&gt;=0) ? 'color: green;' : 'color:red;'}" />
+				</p:column>
+				<p:column headerText="Open">
+					<h:outputText value="#{stock.open}" />
+				</p:column>
+				<p:column headerText="Close">
+					<h:outputText value="#{stock.close}" />
+				</p:column>
+				<p:column headerText="High">
+					<h:outputText value="#{stock.high}" />
+				</p:column>
+				<p:column headerText="Low">
+					<h:outputText value="#{stock.low}" />
+				</p:column>
+				<p:column headerText="Volume">
+					<h:outputText value="#{stock.volume}" />
+				</p:column>
+				<p:column headerText="Change">
+					<h:outputText value="#{stock.variation}"
+						style="#{(stock.variation&gt;=0) ? 'color: green;' : 'color:red;'}" />
+				</p:column>
+				<p:column headerText="Comment">
+					<h:outputText value="#{stock.comment}" />
+				</p:column>
+				<f:facet name="footer">
+					<p:outputPanel>
+						<h:outputText value="Search all fields:" />
+						<p:inputText id="globalFilter" onkeyup="PF('mystocks').filter()"
+							style="width:150px" placeholder="Enter keyword" />
+					</p:outputPanel>
+				</f:facet>
+				<f:facet name="footer">
+					<br></br>
+					<br></br>
+					<p:chart rendered="#{not empty stockView.areaSelectedStock}"
+						type="line" model="#{stockView.areaSelectedStock}"
+						style="height:300px" />
+				</f:facet>
+			</p:dataTable>
+
+			<p:dataTable id="all-stock-table" rows="10" paginator="true"
+				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="5,10,15" var="stock"
+				value="#{stockView.generalStocks}" selectionMode="single"
+				selection="#{stockView.selectedStock}" rowKey="#{stock.id}"
+				rendered="#{stockView.perspective == 'all'}">
+				<f:facet name="header" id="headerTable">
+					<p:commandButton value="View" icon="fa fa-search" />
+					<h:panelGroup id="buttons-all">
+						<p:commandButton value="Refresh" icon="fa fa-refresh"
+							process="all-stock-table" update="all-stock-table" />
+						<p:commandButton value="Add" icon="fa fa-plus"
+							actionListener="#{stockView.addStock}" process="all-stock-table"
+							update="all-stock-table">
+							<p:confirm header="Confirmation" message="Are you sure?"
+								icon="ui-icon-alert" />
+						</p:commandButton>
+					</h:panelGroup>
+				</f:facet>
+				<p:column headerText="Name">
+					<h:outputText value="#{stock.name}" />
+				</p:column>
+				<p:column headerText="Symbol">
+					<h:outputText value="#{stock.symbol}"
+						style="#{(stock.variation&gt;=0) ? 'color: green;' : 'color:red;'}" />
+				</p:column>
+				<p:column headerText="Open">
+					<h:outputText value="#{stock.open}" />
+				</p:column>
+				<p:column headerText="Close">
+					<h:outputText value="#{stock.close}" />
+				</p:column>
+				<p:column headerText="High">
+					<h:outputText value="#{stock.high}" />
+				</p:column>
+				<p:column headerText="Low">
+					<h:outputText value="#{stock.low}" />
+				</p:column>
+				<p:column headerText="Volume">
+					<h:outputText value="#{stock.volume}" />
+				</p:column>
+				<p:column headerText="Change">
+					<h:outputText value="#{stock.variation}"
+						style="#{(stock.variation&gt;=0) ? 'color: green;' : 'color:red;'}" />
+				</p:column>
+				<p:column headerText="Comment">
+					<h:outputText value="#{stock.comment}" />
+				</p:column>
+			</p:dataTable>
+
+
+			<p:outputPanel deferred="true"
+				rendered="#{stockView.perspective != 'all' and stockView.perspective!='my'}">
+				<h3>No perspective selected.</h3>
+				<p>Please select a perspective...</p>
+			</p:outputPanel>
+
+			<div style="width:1200px; height:600px;"></div>
+
+			<p:outputPanel deferred="true" deferredMode="visible"
+				rendered="#{stockView.perspective != 'all' and stockView.perspective!='my'}">
+				<h3>No perspective selected.</h3>
+				<p>Please select a perspective...</p>
+			</p:outputPanel>
+
+
+		</h:form>
+
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+			<p:commandButton value="Yes" type="button"
+				styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+			<p:commandButton value="No" type="button"
+				styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+		</p:confirmDialog>
+
+
+	</ui:define>
 </ui:composition>
